# Project-Briareus

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/agents/: __init__.py  base.py  coder.py  researcher.py  writer.py
src/briareus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/config/: prompts.py  settings.py
src/graph/: builder.py
src/state/: schemas.py
src/supervisor/: __init__.py  planner.py  reviewer.py  router.py  synthesizer.py
